Fix header main spacing out a bit on index.html

--- a/style.css
+++ b/style.css
@@ -231,10 +231,15 @@ input[type="submit"]:hover {
 }
 .index{
     display:inline-block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 .index h1{
     display: flex;
     justify-content: center;
+    padding: 0;
+    margin-top: 7% ;
 }
 .hero{
     padding: 0;
